<?xml version="1.0"?>
<package>
  <name>rossec</name>
  <version>0.2.0</version>
  <description>The rossec is a library developed to provide cryptography on messages exchanges using ROS</description>

  <maintainer email="feliperalmeida">felipe</maintainer>
  <maintainer email="longaraymatheus">matheus</maintainer>

  <license>GPLv2</license>

  <url type="website">https://github.com/frda/rossec</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
