<?xml version="1.0"?>
<package>
  <name>rossec</name>
  <version>0.2.0</version>
  <description>rossec is a library developed to provide cryptography on messages exchanges using ROS</description>

  <maintainer email="feliperalmeida@gmail.com">Felipe Almeida</maintainer>
  <maintainer email="longaray.matheus@gmail.com">Matheus Longaray</maintainer>

  <license>GPLv2</license>

  <url type="repo">https://github.com/frda/rossec</url>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
